abstract class Movable extends Component implements IMoveStrategy {
    canMove() {
        return true;
    }
}