abstract class GameState {
    abstract name: string;
  }
  